--- a/src/lib/color-picker/color-picker-collection.component.scss
+++ b/src/lib/color-picker/color-picker-collection.component.scss
@@ -3,9 +3,8 @@
   padding: 10px 18px;
 
   h3 {
-    color: #100214;
+    color: rgba(0,0,0,0.87);
     text-transform: uppercase;
-    font-family: 'Open Sans', sans-serif;
     font-size: 12px;
     font-weight: 700;
     margin: 0 0 10px 0;
@@ -33,8 +32,8 @@ button {
 
   mat-icon {
     &.black {
-      color: #100214 !important;
-      fill: #100214 !important;
+      color: rgba(0,0,0,0.87) !important;
+      fill: rgba(0,0,0,0.87) !important;
     }
     &.white {
       color: #ffffff !important;
@@ -43,9 +42,9 @@ button {
   }
 
   &.black {
-    color: #100214 !important;
+    color:  rgba(0,0,0,0.87)  !important;
    mat-icon {
-      color: #100214 !important;
+      color:  rgba(0,0,0,0.87)  !important;
     }
   }
   &.white {
