--- a/projects/material-community-components/color-picker/color-picker-selector.component.scss
+++ b/projects/material-community-components/color-picker/color-picker-selector.component.scss
@@ -1,3 +1,8 @@
+@import "common";
+
+$vertical-position-marker: url('data:image/gif;base64,R0lGODdhHgAIALMAAAAAADU1NTk5OUJCQkpKSlZWVltbW2pqaoCAgP///wAAAAAAAAAAAAAAAAAAAAAAACH5BAkAAAoALAAAAAAeAAgAAAQw0BhFq734yjJm/p8xFEVAeGCqGERACmahgkUrvPH81cFdnjoQy8VBBTOiguSokkQAADs=');
+
+
 canvas {
   &#colors,
   &#alpha {
@@ -32,8 +37,8 @@ canvas {
   right: 0px;
   top: 0px;
   z-index: 1;
-  background: url('data:image/gif;base64,R0lGODdhHgAIALMAAAAAADU1NTk5OUJCQkpKSlZWVltbW2pqaoCAgP///wAAAAAAAAAAAAAAAAAAAAAAACH5BAkAAAoALAAAAAAeAAgAAAQw0BhFq734yjJm/p8xFEVAeGCqGERACmahgkUrvPH81cFdnjoQy8VBBTOiguSokkQAADs=')
-    no-repeat;
+  background-image: $vertical-position-marker ;
+  background-repeat: no-repeat;
 
   &.alpha-enabled {
     right: 40px;
@@ -43,11 +48,22 @@ canvas {
 .mcc-alpha-position {
   position: absolute;
   width: 30px;
-  top: 0px;
+  top: 0;
   right: 5px;
   z-index: 1;
-  background: url('data:image/gif;base64,R0lGODdhHgAIALMAAAAAADU1NTk5OUJCQkpKSlZWVltbW2pqaoCAgP///wAAAAAAAAAAAAAAAAAAAAAAACH5BAkAAAoALAAAAAAeAAgAAAQw0BhFq734yjJm/p8xFEVAeGCqGERACmahgkUrvPH81cFdnjoQy8VBBTOiguSokkQAADs=')
-  no-repeat;
+  background-image: $vertical-position-marker ;
+  background-repeat: no-repeat;
+}
+
+.mcc-alpha-background {
+  background-image: $alpha-background;
+  background-repeat: repeat;
+  background-size: 14px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .mcc-color-picker-selector {
@@ -79,10 +95,22 @@ canvas {
 }
 
 .mcc-color-picker-selector-preview {
+  background-image: $alpha-background;
+  background-repeat: repeat;
+  background-size: 14px;
+  position: relative;
   height: 40px;
   padding: 15px;
   border-bottom: 1px #e1e1e1 solid;
   box-sizing: content-box;
+
+  .mcc-color-picker-selector-preview-background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
 
   form {
     display: inline-block;
