feat(color-picker): alpha background pattern for used and collection colors

--- a/projects/material-community-components/color-picker/color-picker-collection.component.html
+++ b/projects/material-community-components/color-picker/color-picker-collection.component.html
@@ -9,33 +9,14 @@
     aria-label="transparent"
     (click)="setTransparent()"
   >
-    <div class="mcc-color-picker-transparent"></div>
+    <span class="mcc-color-picker-transparent"></span>
   </button>
 
-  <button
+  <mcc-color-picker-option
     *ngFor="let color of colors"
-    mat-mini-fab
-    class="mat-elevation-z0"
-    role="option"
-    [disabled]="!color || color === emptyColor"
-    [mccColorPickerOption]="color"
-    (click)="setColor(color)"
+    [color]="color"
+    [selectedColor]="selectedColor"
+    (colorSelected)="setColor($event)"
   >
-    <ng-container *ngIf="!disableSelectedIcon">
-      <mat-icon *ngIf="!isColorSelected(color); else selectionIcon"></mat-icon>
-      <ng-template #selectionIcon>
-        <mat-icon
-          *ngIf="selectedSvgIcon; else selectionFontIcon"
-          class="mat-svg-icon"
-          [svgIcon]="selectedSvgIcon"
-          [ngClass]="getIconColorClassForColor(color)"
-        ></mat-icon>
-        <ng-template #selectionFontIcon>
-          <mat-icon *ngIf="!selectedSvgIcon" class="mat-font-icon" [ngClass]="getIconColorClassForColor(color)">{{
-            selectedIcon
-          }}</mat-icon>
-        </ng-template>
-      </ng-template>
-    </ng-container>
-  </button>
+  </mcc-color-picker-option>
 </div>
