fix(color-picker): circle showing around color collection buttons

--- a/projects/material-community-components/color-picker/color-picker-option.component.scss
+++ b/projects/material-community-components/color-picker/color-picker-option.component.scss
@@ -51,7 +51,7 @@ button {
   background-repeat: repeat;
   background-size: 14px;
   position: relative;
-  background-color: transparent;
+  background-color: transparent !important;
 }
 
 .option-color {
