fix(color-picker): fixed overlay being cut-off on mobile devices

--- a/projects/material-community-components/color-picker/color-picker.component.html
+++ b/projects/material-community-components/color-picker/color-picker.component.html
@@ -11,10 +11,12 @@
     <span class="btn-picker-background" [style.backgroundColor]="selectedColor"></span>
   </button>
 
+<!--  TODO: try to center with the overlay centerHorizontally on mobile instead of cdkConnectedOverlayPush-->
   <ng-template
     cdkConnectedOverlay
     cdkConnectedOverlayHasBackdrop
     cdkConnectedOverlayBackdropClass="mcc-color-picker-backdrop"
+    cdkConnectedOverlayPush
     [cdkConnectedOverlayOrigin]="triggerButton"
     [cdkConnectedOverlayOpen]="isOpen"
     (backdropClick)="backdropClick()"
