--- a/projects/demo/src/app/color-picker/color-picker.component.html
+++ b/projects/demo/src/app/color-picker/color-picker.component.html
@@ -20,7 +20,7 @@
       <mat-grid-tile>
         <a href="https://github.com/tiaguinho/material-community-components/tree/master/src/lib/color-picker"
           target="_blank">
-          <img src="https://tiaguinho.github.io/material-community-components/demo-app/assets/img/source-code.png"
+          <img src="/assets/img/source-code.png"
             alt="Source Code" class="source-code" />
         </a>
       </mat-grid-tile>
