--- a/projects/material-community-components/color-picker/color-picker-option.component.scss
+++ b/projects/material-community-components/color-picker/color-picker-option.component.scss
@@ -1,4 +1,4 @@
-@import 'common';
+@use 'common';
 
 button {
   width: 22px;
@@ -47,7 +47,7 @@ button {
 
 
 .option-background {
-  background-image: $alpha-background;
+  background-image: common.$alpha-background;
   background-repeat: repeat;
   background-size: 14px;
   position: relative;
