--- a/projects/material-community-components/color-picker/color-picker-selector.component.scss
+++ b/projects/material-community-components/color-picker/color-picker-selector.component.scss
@@ -1,4 +1,4 @@
-@import "common";
+@use "common";
 
 $vertical-position-marker: url('data:image/gif;base64,R0lGODdhHgAIALMAAAAAADU1NTk5OUJCQkpKSlZWVltbW2pqaoCAgP///wAAAAAAAAAAAAAAAAAAAAAAACH5BAkAAAoALAAAAAAeAAgAAAQw0BhFq734yjJm/p8xFEVAeGCqGERACmahgkUrvPH81cFdnjoQy8VBBTOiguSokkQAADs=');
 
@@ -56,7 +56,7 @@ canvas {
 }
 
 .mcc-alpha-background {
-  background-image: $alpha-background;
+  background-image: common.$alpha-background;
   background-repeat: repeat;
   background-size: 14px;
   position: absolute;
@@ -95,7 +95,7 @@ canvas {
 }
 
 .mcc-color-picker-selector-preview {
-  background-image: $alpha-background;
+  background-image: common.$alpha-background;
   background-repeat: repeat;
   background-size: 14px;
   position: relative;
