--- a/projects/material-community-components/color-picker/color-picker.component.scss
+++ b/projects/material-community-components/color-picker/color-picker.component.scss
@@ -1,11 +1,11 @@
-@import "common";
+@use "common";
 
 .btn-picker {
   width: 25px;
   height: 25px;
   cursor: pointer;
   position: relative;
-  background-image: $alpha-background;
+  background-image: common.$alpha-background;
   background-repeat: repeat;
   background-size: 14px;
   border-radius: 3px;
