--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -1,4 +1,4 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 @use './projects/material-community-components/theming' as mcc;
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:300,400');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
