--- a/projects/material-community-components/speed-dial/_speed-dial-theme.scss
+++ b/projects/material-community-components/speed-dial/_speed-dial-theme.scss
@@ -1,5 +1,5 @@
 @use 'sass:map';
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
 @mixin mcc-speed-dial-theme($theme) {
   $primary: map.get($theme, primary);
