--- a/projects/material-community-components/timer-picker/_timer-picker-theme.scss
+++ b/projects/material-community-components/timer-picker/_timer-picker-theme.scss
@@ -1,5 +1,5 @@
 @use 'sass:map';
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
 @mixin mcc-timer-picker-theme($theme) {
   $primary: map.get($theme, primary);
