build(deps): bump angular to 15
Updated Angular/Material and related dependencies to 15.
Using legacy material components for now to ease the upgrade process.
This required changing the imports to the Legacy Material modules,
removing the `appearance="legacy"` attribute from `mat-form-field` and
specifying legacy styling in the demo theme.

Angular 15 now requires a es target of `2022` in tsconfig.json.

Tests ain't running yet. Final problem to fix.

--- a/projects/demo/src/app/color-picker/components/color-picker-examples.component.html
+++ b/projects/demo/src/app/color-picker/components/color-picker-examples.component.html
@@ -343,7 +343,7 @@
   </mat-card-header>
 
   <mat-card-content>
-    <mat-form-field appearance="legacy">
+    <mat-form-field >
       <input matInput mccColorPickerOrigin #trigger5="mccColorPickerOrigin" [(ngModel)]="color5" />
       <mcc-color-picker matSuffix mccConnectedColorPicker [mccConnectedColorPickerOrigin]="trigger5" format="rgb" alpha> </mcc-color-picker>
     </mat-form-field>
