--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 
-@include mat.core();
+@include mat.legacy-core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
@@ -16,10 +16,11 @@ $demo-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $demo-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$demo-theme: mat.define-light-theme($demo-primary, $demo-accent, $demo-warn);
+$demo-theme: mat.define-light-theme((color: (primary: $demo-primary, accent: $demo-accent, warn: $demo-warn),
+                  typography: mat.define-legacy-typography-config(), density: 0));
 
 // build angular material theme
-@include mat.all-component-themes($demo-theme);
+@include mat.all-legacy-component-themes($demo-theme);
 
 // pass angular material theme to material community components
 @include mcc.mcc-theme($demo-theme);
